<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/feedSent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/tick" />

        <TextView
            android:id="@+id/feedbacksent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:gravity="center"
            android:text="@string/sent"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />
        <Button
            android:text="@string/okay"
            android:id="@+id/closefeedback"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_below="@+id/feedbacksent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/mainlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ratemetime"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/smile_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/feedbackBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/feedback"
                android:textColor="#000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/editbox"
                android:gravity="top"
                android:hint="@string/yourName"
                android:inputType="textPersonName"
                android:padding="16dp"

                />

            <EditText
                android:id="@+id/UserFeedBack"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:background="@drawable/editbox"
                android:gravity="top"
                android:hint="@string/say"
                android:inputType="text|textMultiLine"
                android:padding="16dp"

                />

            <Button
                android:id="@+id/sendfeedback"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:drawableLeft="@drawable/ic_send"
                android:drawablePadding="3dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>