<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_window_prov_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="3dp"
                android:text="@string/null_text"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_window_prov_cases"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/info_window_prov_case"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/null_text"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_window_prov_death"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/info_window_prov_death"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/null_text"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_window_prov_cured"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/info_window_prov_cured"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/null_text"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_window_prov_treated"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/info_window_prov_treated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/null_text"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/info_window_prov_percentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/null_text"
                            android:textColor="@color/themeRed"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="%"
                            android:textColor="@color/themeRed"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/info_window_prov_subtitle"
                        android:textSize="8sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="State Notes :"
                tools:ignore="HardcodedText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/StateNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:textSize="13sp"
                android:layout_marginRight="15dp" />

            </LinearLayout>

        </LinearLayout>


</androidx.cardview.widget.CardView>